package com.maisonneuve.music_playlist_manager.algorithm;

public interface Algorithm {
}
