package com.maisonneuve.music_playlist_manager.model;

public enum Genre {
}
