package com.maisonneuve.music_playlist_manager.model;

public class User {
}
